feat(render): android XML resource previews (vector / AVD / adaptive icon) (#259)